crates/mega-evm/tests/satin/snapshots/satin__intrinsic__a_transfer_that_cannot_pay_the_new_account_runs_out_of_gas.snap
---
source: crates/mega-evm/tests/satin/intrinsic.rs
expression: "&OutcomeView::new(&outcome)"
---
{
  "result": {
    "kind": "halt",
    "reason": "Base(OutOfGas(Basic))",
    "output": null,
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 177319,
    "state": 0,
    "history": 27280,
    "history_bytes": 310,
    "reservoir_remaining": 0,
    "floor": 21000,
    "gas_used": 204599
  },
  "result_gas": {
    "total_gas_spent": 204599,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 21000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 310,
    "write_records": 0
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000000000": "unchanged",
    "0x0000000000000000000000000000000000800000": {
      "balance": "0xde0b6b3a7640000",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x4200000000000000000000000000000000000019": "unchanged",
    "0x420000000000000000000000000000000000001a": "unchanged",
    "0x420000000000000000000000000000000000001b": "unchanged"
  }
}
