crates/mega-evm/tests/satin/snapshots/satin__intrinsic__a_zero_calldata_byte_costs_the_same_as_a_non_zero_one.snap
---
source: crates/mega-evm/tests/satin/intrinsic.rs
expression: "&by_case([(\"zeros\", OutcomeView::new(&zeros.outcome)),\n(\"non_zeros\", OutcomeView::new(&non_zeros.outcome)),])"
---
{
  "non_zeros": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 31384,
      "state": 0,
      "history": 117392,
      "history_bytes": 1334,
      "reservoir_remaining": 0,
      "floor": 80536,
      "gas_used": 148776
    },
    "result_gas": {
      "total_gas_spent": 148776,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 80536,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 1334,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "zeros": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 19096,
      "state": 0,
      "history": 117392,
      "history_bytes": 1334,
      "reservoir_remaining": 0,
      "floor": 80536,
      "gas_used": 136488
    },
    "result_gas": {
      "total_gas_spent": 136488,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 80536,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 1334,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
