crates/mega-evm/tests/satin/snapshots/satin__intrinsic__access_list_bytes_are_counted_in_the_floor_at_sixty_four_each.snap
---
source: crates/mega-evm/tests/satin/intrinsic.rs
expression: "&outcomes"
---
{
  "0": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 17400,
      "state": 0,
      "history": 29040,
      "history_bytes": 330,
      "reservoir_remaining": 0,
      "floor": 16280,
      "gas_used": 46440
    },
    "result_gas": {
      "total_gas_spent": 46440,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 16280,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 330,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "1": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 19300,
      "state": 0,
      "history": 31856,
      "history_bytes": 362,
      "reservoir_remaining": 0,
      "floor": 18328,
      "gas_used": 51156
    },
    "result_gas": {
      "total_gas_spent": 51156,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 18328,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 362,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "7": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 30700,
      "state": 0,
      "history": 48752,
      "history_bytes": 554,
      "reservoir_remaining": 0,
      "floor": 30616,
      "gas_used": 79452
    },
    "result_gas": {
      "total_gas_spent": 79452,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 30616,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 554,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "8": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 32600,
      "state": 0,
      "history": 51568,
      "history_bytes": 586,
      "reservoir_remaining": 0,
      "floor": 32664,
      "gas_used": 84168
    },
    "result_gas": {
      "total_gas_spent": 84168,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 32664,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 586,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "16": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 47800,
      "state": 0,
      "history": 74096,
      "history_bytes": 842,
      "reservoir_remaining": 0,
      "floor": 49048,
      "gas_used": 121896
    },
    "result_gas": {
      "total_gas_spent": 121896,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 49048,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 842,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "64": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 139000,
      "state": 0,
      "history": 209264,
      "history_bytes": 2378,
      "reservoir_remaining": 0,
      "floor": 147352,
      "gas_used": 348264
    },
    "result_gas": {
      "total_gas_spent": 348264,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 147352,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 2378,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
