crates/mega-evm/tests/satin/snapshots/satin__intrinsic__one_calldata_byte_costs_sixty_four_gas.snap
---
source: crates/mega-evm/tests/satin/intrinsic.rs
expression: "&view(funded(), with_calldata(1, 0x42))"
---
{
  "result": {
    "kind": "success",
    "reason": "Stop",
    "output": "0x",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 15016,
    "state": 0,
    "history": 27368,
    "history_bytes": 311,
    "reservoir_remaining": 0,
    "floor": 15064,
    "gas_used": 42384
  },
  "result_gas": {
    "total_gas_spent": 42384,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 15064,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 311,
    "write_records": 0
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000000000": "unchanged",
    "0x0000000000000000000000000000000000800000": {
      "balance": "0xde0b6b3a7640000",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000800001": "unchanged",
    "0x4200000000000000000000000000000000000019": "unchanged",
    "0x420000000000000000000000000000000000001a": "unchanged",
    "0x420000000000000000000000000000000000001b": "unchanged"
  }
}
