crates/mega-evm/tests/satin/snapshots/satin__intrinsic__the_execution_cap_bounds_the_calldata_a_transaction_may_carry.snap
---
source: crates/mega-evm/tests/satin/intrinsic.rs
expression: "&OutcomeView::new(&charged.outcome)"
---
{
  "result": {
    "kind": "success",
    "reason": "Stop",
    "output": "0x",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 12514060,
    "state": 0,
    "history": 275006600,
    "history_bytes": 3125075,
    "reservoir_remaining": 1000000,
    "floor": 199999960,
    "gas_used": 287520660
  },
  "result_gas": {
    "total_gas_spent": 287520660,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 199999960,
    "reservoir_remaining": 1000000
  },
  "usage": {
    "data_size": 3125075,
    "write_records": 0
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000000000": "unchanged",
    "0x0000000000000000000000000000000000800000": {
      "balance": "0xd3c21bcecceda1000000",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000800001": "unchanged",
    "0x4200000000000000000000000000000000000019": "unchanged",
    "0x420000000000000000000000000000000000001a": "unchanged",
    "0x420000000000000000000000000000000000001b": "unchanged"
  }
}
