crates/mega-evm/tests/satin/snapshots/satin__intrinsic__the_floor_is_sixty_four_gas_for_every_calldata_byte.snap
---
source: crates/mega-evm/tests/satin/intrinsic.rs
expression: "&outcomes"
---
{
  "100": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 16600,
      "state": 0,
      "history": 36080,
      "history_bytes": 410,
      "reservoir_remaining": 0,
      "floor": 21400,
      "gas_used": 52680
    },
    "result_gas": {
      "total_gas_spent": 52680,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21400,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 410,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "1024": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 31384,
      "state": 0,
      "history": 117392,
      "history_bytes": 1334,
      "reservoir_remaining": 0,
      "floor": 80536,
      "gas_used": 148776
    },
    "result_gas": {
      "total_gas_spent": 148776,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 80536,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 1334,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "4096": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 80536,
      "state": 0,
      "history": 387728,
      "history_bytes": 4406,
      "reservoir_remaining": 0,
      "floor": 277144,
      "gas_used": 468264
    },
    "result_gas": {
      "total_gas_spent": 468264,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 277144,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 4406,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000800000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000800001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
