crates/mega-evm/tests/satin/snapshots/satin__intrinsic__the_floor_of_empty_calldata_is_the_intrinsic_gas.snap
---
source: crates/mega-evm/tests/satin/intrinsic.rs
expression: "&view(funded(), with_calldata(0, 0))"
---
{
  "result": {
    "kind": "success",
    "reason": "Stop",
    "output": "0x",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 15000,
    "state": 0,
    "history": 27280,
    "history_bytes": 310,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 42280
  },
  "result_gas": {
    "total_gas_spent": 42280,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 310,
    "write_records": 0
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000000000": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000800000": {
      "balance": "0xde0b6b3a7640000",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000800001": {
      "balance": "0x1",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x4200000000000000000000000000000000000019": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001a": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001b": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    }
  }
}
